[package]
name = "eth_no_trend_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
ethers = { version = "2.0", features = ["legacy"] }
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.21"

[[bin]]
name = "eth_no_trend_bot"
path = "eth_no_trend_bot.rs"
