[package]
name = "eth_no_trend_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
# Official Polymarket SDK
polymarket-client-sdk = { git = "https://github.com/Polymarket/rs-clob-client.git" }

# Async runtime
tokio = { version = "1.42", features = ["full"] }


# Utilities
anyhow = "1.0"
chrono = "0.4"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust_decimal = "1.36"
rust_decimal_macros = "1.36"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
