[package]
name = "eth_no_trend_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
ethers = "2.0"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.21"
hex = "0.4"
csv = "1.3"

[profile.release]
opt-level = 3
